my-apps/dashboards/homepage/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
